--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+!**/client/src/main/**/build/
+!**/client/src/test/**/node_modules/
+
+/client/package.json
 
 ### STS ###
 .apt_generated
