--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
+    "@angular/animations": "^17.3.4",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "bulma": "^1.0.0",
     "install": "^0.13.0",
+    "ngx-toastr": "^18.0.0",
     "npm": "^10.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
